--- a/style.css
+++ b/style.css
@@ -11,6 +11,15 @@ nav {
     height: 70px;
     display: flex;
     justify-content: space-between;
+    align-items: center;
+    padding: 0 16px;
+    background-color: #cafdff;
+}
+
+a {
+    color: #000;
+    font-size: 24px;
+    font-weight: 700;
 }
 
 .logo {
@@ -23,4 +32,5 @@ ul {
 
 li {
     list-style-type: none;
+    padding-left: 16px;
 }
