--- a/style.css
+++ b/style.css
@@ -70,6 +70,12 @@ li {
     justify-content: center;
 }
 
+#about,
+#discord,
+#contact {
+    padding: 48px 0;
+}
+
 /*
 
 About
@@ -77,7 +83,6 @@ About
 */
 
 #about {
-    padding: 48px 0;
     background-color: #f8ffdc;
 }
 
@@ -115,3 +120,19 @@ img {
     line-height: 1.5;
     margin: 24px;
 }
+
+/*
+
+DISCORD
+
+*/
+
+#discord {
+    background-color: #cefeff;
+}
+
+/*
+
+CONTACT
+
+*/
